--- a/index.Rmd
+++ b/index.Rmd
@@ -111,6 +111,7 @@ rmarkdown::render('index.Rmd', 'word_document')
 rmarkdown::render('schedule.Rmd', 'word_document')
 rmarkdown::render('LAB1.Rmd', 'word_document')
 rmarkdown::render('LAB2.Rmd', 'word_document')
+rmarkdown::render('LAB3.Rmd', 'word_document')
 
 
 ## [Quiz #1](https://unr.instructure.com/courses/15896/quizzes/21572)
