lecture on matrices

--- a/LAB2.Rmd
+++ b/LAB2.Rmd
@@ -56,9 +56,10 @@ Please provide short answers to the following questions:
 
 1a. Describe two possible density-dependence mechanisms -- that is, tell a plausible story about two hypothetical wildlife populations, one of which experiences *lower survival* (higher mortality) as densities increase and another that experiences *lower reproduction*.  Have fun and be creative- we will not grade these on whether these mechanisms actually occur in nature- we just want to give you a chance to think about the many possible mechanisms that could potentially regulate wild populations. You can use real-world examples if you would rather- that is up to you.   
 
-1b. For one of the above mechanisms, draw (on paper or electronically) two graphs to illustracte how this hypothetical mechanism might manifest at a population level:
-  i. Abundance (Y axis) over time (X axis).
-  ii. Vital rate (*b* or *d*) (Y axis) over abundance (X axis). 
+1b. For one of the above mechanisms, draw (on paper or electronically) two graphs to illustrate how this hypothetical mechanism might manifest at a population level:     
+
+  i. Abundance (Y axis) over time (X axis). Start the abundance well below carrying capacity.    
+  ii. Vital rate (*b* or *d*) (Y axis) over abundance (X axis).    
   
 For each graph, provide a short (1-2 sentences) description of why you think your hypothetical D-D mechanism would result in this relationship!  
 
@@ -203,9 +204,9 @@ The "100" in this function is there just to help the simulation get started (at 
 
 ##Checklist for Lab 2 completion
 
-* Please bundle the materials into one Zip file and email to Professor Shoemaker and Margarete Walden.
+* Please package the materials into one Word document and email to Professor Shoemaker and Margarete Walden.
 
-The InsightMaker models should be shared directly in InsightMaker. The first step (of course) is to save your model! After you save the model you should see a link on the top left-hand corner, "Insight Access". Click on that link, and a new window will pop up. Under "allow update access", add a username (i.e., kevintshoemaker or waldenTA). click on the "Add User" button, and then click on "Submit". Finally, send me and Margarete an email (through Webcampus or regular email) with the URL for your InsightMaker model(s).
+To share your InsightMaker models: The first step (of course) is to save your model! After you save the model you should see a link on the top left-hand corner, "Insight Access". Click on that link, and a new window will pop up. Under "allow update access", add a username (i.e., kevintshoemaker or waldenTA). click on the "Add User" button, and then click on "Submit". Finally, embed the URL for your InsightMaker model(s) in your Word document!
 
 ***Due Feb. 10 at 11 am.***
 
