--- a/LECTURE7.Rmd
+++ b/LECTURE7.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Passenger Pigeon/Allee effect"
+title: "Matrix population models"
 author: "NRES 470/670"
-date: "Feb 1, 2017"
+date: "Feb 11, 2017"
 output: 
   html_document: 
     theme: spacelab
@@ -13,9 +13,181 @@ output:
 knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 ```
 
-## Allee Effect
+## Why matrices? 
 
-![](prairie_dogs3.jpg)
+### Reason 1: simplify!
+
+![](IM8.jpg)
+
+You might recognize this InsightMaker model from Lab 3. This represents an age-structured population with only three age classes. Imagine if there were five age classes, or 10? How many lines would you have to draw, how many equations would you have to put in different flows. It would be tedious, and you could easily run into errors that would be very hard to de-bug! 
+
+![](teasel1.jpg)
+
+Consider the teasel example from Gotelli. How tedious would this be to implement in InsightMaker? There MUST be an easier way!
+
+![](gotelli3_6.jpg)
+
+The population vital rates for pretty much any age-structured or stage-structured population can be represented by a **transition matrix**, which summarizes all the information about mortality, birth rates, and transitions between stages!
+
+For example, the teasel vital rates can be summarized in this matrix:
+
+```{r echo=FALSE}
+teasel <- read.csv("teaselmatrix1.csv", header=T)
+teasel <- teasel[,-1]
+teasel_matrix <- as.matrix(teasel)
+colnames(teasel_matrix) <- names(teasel)
+rownames(teasel_matrix) <- names(teasel)
+teasel_matrix
+
+```
+
+Isn't that *elegant*!!
+
+We'll go into more detail about matrices later!
+
+### Reason 2: projection!
+
+In one of the questions in Lab 3, your were asked to use a life table to project the age structure of a population one time step in the future. Was it simple and straightforward to do this? 
+
+Life tables are great for summarizing the vital rates of age-structured populations. But _life tables are not great for projecting age-structured abundance into the future_!
+
+You know what *is* great for projecting age-structured abundance into the future?  
+
+For example, let's project a teasel population 1 year into the future:
+
+First of all, we need to begin with a teasel population...
+
+```{r echo=F}
+
+Initial_teasel <- matrix(c(1000,1500,200,300,600,25),ncol=1)
+rownames(Initial_teasel) <- rownames(teasel_matrix)
+colnames(Initial_teasel) <- "Abundance"
+Initial_teasel
+
+```
+
+Then all we need to do is matrix-multiply this **vector** of abundances by the **transition matrix** from above! Each time we do this multiplication step, we advance one year!
+
+Let's try it in R!
+
+```{r}
+
+Year1 <- teasel_matrix %*% Initial_teasel
+Year1
+  
+```
+
+How easy is that!
+
+To compute teasel abundance in year 2, we can simply repeat:
+
+```{r}
+thisYear <- Year1
+nextYear <- teasel_matrix %*% thisYear
+nextYear
+
+```
+
+We could use this strategy to simulate for ten years for example...
+
+Notice the use of a **for loop** here!
+
+```{r}
+nYears <- 10
+tenYears <- matrix(0,nrow=6,ncol=nYears+1)
+rownames(tenYears) <- rownames(Initial_teasel)
+colnames(tenYears) <- seq(0,10)
+tenYears[,1] <- Initial_teasel 
+
+for(t in 2:(nYears+1)){
+  tenYears[,t] <-  teasel_matrix %*% tenYears[,t-1]
+}
+
+tenYears
+
+```
+
+Finally, we can plot out the abundance of each stage over 10 years!
+
+```{r echo=FALSE}
+
+plot(1,1,pch="",ylim=c(0,60000000),xlim=c(0,11),xlab="Years",ylab="Abundance",xaxt="n")
+cols <- rainbow(6)
+for(s in 1:6){
+  points(tenYears[s,],col=cols[s],type="l",lwd=2)
+}
+axis(1,at=seq(1,11),labels = seq(0,10))
+legend("topleft",col=cols,lwd=rep(2,6),legend=rownames(tenYears))
+
+```
+
+So projection is easy! 
+
+## Mechanics of matrix population models
+
+Let's take a look at a basic age-structured population -- specifically the in-class example from the last lecture ([this one](https://insightmaker.com/insight/70809/Age-structured-population).). In InsightMaker it looks like this:
+
+![](IM9.jpg)
+
+Let's convert the vital rates to a three-stage **projection matrix**.  Projection matrices are **square matrices** where the number of rows and columns are equal to the number of life stages. In this case, that means three! Let's make a blank matrix for now:
+
+```{r echo=FALSE}
+TMat <- matrix(0,nrow=3,ncol=3)
+stagenames <- c("Juveniles","Subadults","Adults")
+rownames(TMat) <- stagenames
+colnames(TMat) <- stagenames
+TMat
+```
+
+You can read the **elements** of a transition matrix as follows:
+
+> "The per-capita production of _(row name)_ by _(col name)_ is _(value of element)_"
+
+Now we can start filling in this matrix. Let's begin with the top left **element** of the matrix. This represents the per-capita production of Juveniles (row) by Juveniles (col). What is the value of this? 
+
+How about the second row, first column. This represents the per-capita production of Subadults (row) by Juveniles (col). This is the transition rate from juvenile to subadult. The value from our model is 0.3. 
+
+Let's update our transition matrix:
+
+```{r echo=FALSE}
+TMat[2,1] <- 0.3
+TMat
+```
+
+If we keep going, we get the following matrix. See if you can understand what this matrix is saying about the transitions from and two the three life stages. 
+
+```{r echo=FALSE}
+TMat[,1] <- c(0,0.3,0)
+TMat[,2] <- c(0,0.4,0.1)
+TMat[,3] <- c(4,0,0.85)
+TMat
+```
+
+
+
+The columns of the projection matrix are the stages that  **from** 
+
+## Limitations of matrix population models
+
+Matrix population models are great, but they have some limitations
+
+### What about density-dependence?
+
+In some ways, while introducing a new level of realism in our models -- age-structure -- we have been ignoring another type of realism that we introduced in earlier lectures- **density-dependence**!
+
+Which vital rates are density-dependent? All? Some? It depends? Are the data available?
+
+How do you incorporate density-dependence into a projection matrix?  
+
+Hmmm....
+
+
+
+
+
+
+
+
 
 What happens if density dependence goes the other way? What if an decrease in density changes vital rates to produce an *decrease* in the population growth rate *r*? 
 
